report users done

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -28,7 +28,7 @@
     </button> -->
     <div class="foot-social hide-on-keyboard-open">
       <div class="padding">
-        <a ng-click="openModal('terms')" class="positive">Termos de uso e política de privacidade</a>
+        <a ng-click="modal.show()" class="positive">Termos de uso e política de privacidade</a>
       </div>
     </div>
 
