--- a/www/templates/popoverUser.html
+++ b/www/templates/popoverUser.html
@@ -13,6 +13,9 @@
       <a ng-if="isBlocked"class="item" ng-click="unblockUser(userp);closePopover()">
         Desbloquear usuário
       </a>
+      <a class="item" ng-click="closePopover()" ui-sref='app.report'>
+        Denunciar usuário
+      </a>
     </div>
   </ion-content>
 </ion-popover-view>
