some fix in existing pages

--- a/www/templates/matches.html
+++ b/www/templates/matches.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Matches">
+<ion-view view-title="Lovers">
   <ion-nav-bar class="bar bar-light">
     <ion-nav-buttons side="right">
     </ion-nav-buttons>
