--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -1,13 +1,11 @@
-<ion-view hide-nav-bar="true">
+<ion-view title="Denunciar usuário">
+  <ion-nav-bar class="bar bar-light">
+    <ion-nav-back-button ></ion-nav-back-button>
+  </ion-nav-bar>
   <ion-content class="background-home">
-    <div class="center-carai">
-      <div class="circle-number">1
-      </div>
-    </div>
     <div class="damn">
       Diga-nos o motivo de sua denuncia
     </div>
-    {{userp.name}}
     <form name="testForm" class="padding-tela1" novalidate>
         <div class="distance">
           <span class="labels"></br></span>
