--- a/www/templates/terms.html
+++ b/www/templates/terms.html
@@ -1,10 +1,8 @@
-<ion-modal-view class="">
-  <ion-header-bar class="bar bar-header bar-positive">
-    <h1 class="title">Termos de uso e política de privacidade</h1>
-    <h1 class="title">Termos de uso e política de privacidade</h1>
-    <button class="button button-clear button-primary icon-right ion-close" ng-click="modal.hide()"></button>
-  </ion-header-bar>
-  <ion-content>
+<ion-view view-title="Termos de uso">
+  <ion-nav-bar class="bar bar-light">
+    <ion-nav-back-button ></ion-nav-back-button>
+  </ion-nav-bar>
+  <ion-content overflow-scroll="false">
   </br>
     TERMOS DE USO
 </br>
@@ -213,4 +211,4 @@
 
 
   </ion-content>
-</ion-modal-view>
+</ion-view view-title="Termos de uso">
