--- a/www/templates/modalCamera.html
+++ b/www/templates/modalCamera.html
@@ -1,25 +1,21 @@
-<ion-modal-view class="modal-init">
+<ion-modal-view class="modal-init2">
   <!-- <ion-header-bar class="bar-light">
         </ion-header-bar> -->
 
-   <ion-content>
-     <div class="title-modal" >Selecione o dispositivo!</div>
+   <ion-content class ="modal-camera">
+     <div class="title-modal" >Selecione o dispositivo</div>
      <div class="padding">
-     <div class="row">
+     <div class="row icon-modal">
          <div class="col col-50">
-           <a class="icon ion-camera"></a>
+           <a class="icon ion-camera" ng-click="newPicture('Camera.PictureSourceType.CAMERA');modal.hide()"></a>
          </div>
          <div class="col col-50">
-           <div class="profile-image2">
+           <div class="profile-image2" ng-click="newPicture('Camera.PictureSourceType.PHOTOLIBRARY');modal.hide()">
              <a class="icon ion-image"></a>
            </div>
          </div>
      </div>
    </div>
-     <div class="padding">
-       <button class="button button-block button-assertive" ui-sref="app.matches" ng-controller="LoginCtrl" ng-click="reloadUser('app.matches'); closeModal()">Enviar mensagem</button>
-       <button class="button button-block poop" ng-controller="UsersCtrl" ng-click = "viewUser(userp.token); closeModal()">Ver perfil</button>
-    </div>
 
    </ion-content>
 </ion-modal-view>
