--- a/www/templates/notifications.html
+++ b/www/templates/notifications.html
@@ -25,7 +25,7 @@
     </ion-tab>
 
     <ion-tab icon-on="ion-ios-camera-outline" icon-off="ion-ios-camera-outline"
-      ng-controller="LoginCtrl"ng-click="newPicture()">
+      ng-controller="LoginCtrl"ng-click="modal.show()" >
     </ion-tab>
 
     <ion-tab icon-on="ion-ios-bell" icon-off="ion-ios-bell-outline"
