--- a/www/templates/primeiraTelaEdit.html
+++ b/www/templates/primeiraTelaEdit.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true">
-  <ion-content class="background-home">
+  <ion-content class="background-home" overflow-scroll="false">
     <div class="center-carai">
       <div class="circle-number">1
       </div>
