--- a/www/templates/modalCamera.html
+++ b/www/templates/modalCamera.html
@@ -7,10 +7,10 @@
      <div class="padding">
      <div class="row icon-modal">
          <div class="col col-50">
-           <a class="icon ion-camera" ng-click="newPicture('Camera.PictureSourceType.CAMERA');modal.hide()"></a>
+           <a class="icon ion-camera" ng-click="newPicture();modal.hide()"></a>
          </div>
          <div class="col col-50">
-           <div class="profile-image2" ng-click="newPicture('Camera.PictureSourceType.PHOTOLIBRARY');modal.hide()">
+           <div class="profile-image2" ng-click="newPictureLib();modal.hide()">
              <a class="icon ion-image"></a>
            </div>
          </div>
