--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content>
+    <ion-content overflow-scroll="false">
       <ion-nav-bar class="bar bar-header nao bar-light">
           <h1 class="title">Meu Curriculum</h1>
           <ion-nav-buttons side="right">
