--- a/www/templates/segundaTelaEdit.html
+++ b/www/templates/segundaTelaEdit.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true">
-  <ion-content class="background-home">
+  <ion-content overflow-scroll="false" class="background-home">
     <div class="center-carai">
       <div class="circle-number">2
       </div>
@@ -35,7 +35,7 @@
       <div class="list">
         <label class="item item-input item-floating-label">
           <span class="input-label">Idade máxima de busca</span>
-          <input type="text" placeholder="Idade máxima de busca" ng-model="user.search_range">
+          <input type="number" placeholder="Idade máxima de busca" ng-model="user.search_range">
         </label>
       </div>
     </div>
