--- a/www/templates/primeiraTelaEdit.html
+++ b/www/templates/primeiraTelaEdit.html
@@ -61,13 +61,13 @@
           <div class="col col-50">
             <span class="labels"></br></span>
             <label class="item item-input inputs-register">
-              <input placeholder="Altura" type="number" ng-model='user.height'>
+              <input placeholder="Altura" type="number" step="0.01" ng-model='user.height'>
             </label>
           </div>
           <div class="col col-50">
             <span class="labels"></br></span>
             <label class="item item-input inputs-register">
-              <input placeholder="Peso" type="number" ng-model='user.weight'>
+              <input placeholder="Peso" type="number" step="0.01" ng-model='user.weight'>
             </label>
           </div>
         </div>
