update user and reload fix

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,8 +20,8 @@
 }
 
 .modal-init2 {
-  min-height: 30vh;
-  height: 30vh;
+  min-height: 200px;
+  height: 200px;
   width: 80vw;
   margin-left: 10vw;
   margin-top: 25vh;
