Modified inappropriate variables names.
Signed-off-by: Bruno de Amorim Campos<amorim.software@gmail.com>

--- a/www/templates/editProfile.html
+++ b/www/templates/editProfile.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="true">
   <ion-content overflow-scroll="false" class="background-home">
-    <div class="damn">
+    <div class="label">
       Configure seu perfil
     </div>
     <div class="profile-image padding">
@@ -110,7 +110,7 @@
             </div>
         </div>
     <span class="labels"></br></span>
-        <button class="sparara" ng-click="updateProfile(user)" ui-sref="app.profile">Salvar</button>
+        <button class="update-information" ng-click="updateProfile(user)" ui-sref="app.profile">Salvar</button>
         <span class="labels"></br></span>
         <span class="labels"></br></span>
     </form>
