--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -10,8 +10,8 @@
         </div>
   <div class="padding-login">
     <div class="list">
-      <button class="button button-block button-assertive" ng-click="loginGoogle()"><div class="margin-carai"><i class="icon ion-social-google"></i></div>Google</button>
-      <button class="button button-block button-positive" ng-click="loginFacebook()"><div class="margin-carai"><i class="icon ion-social-facebook"></i></div>Facebook</button>
+      <button class="button button-block button-assertive" ng-click="loginGoogle()"><div class="margin-login-button"><i class="icon ion-social-google"></i></div>Google</button>
+      <button class="button button-block button-positive" ng-click="loginFacebook()"><div class="margin-login-button"><i class="icon ion-social-facebook"></i></div>Facebook</button>
     </div>
   </div>
     <!-- <button class="button-block button-positive" style="font-size:18px;" ui-sref="app.register">
