--- a/www/templates/modalMatch.html
+++ b/www/templates/modalMatch.html
@@ -21,7 +21,7 @@
    </div>
      <div class="padding">
        <button class="button button-block button-assertive" ui-sref="app.matches" ng-controller="LoginCtrl" ng-click="reloadUser('app.matches'); closeModal()">Enviar mensagem</button>
-       <button class="button button-block poop" ng-controller="UsersCtrl" ng-click = "viewUser(userp.token); closeModal()">Ver perfil</button>
+       <button class="button button-block view-user-modal" ng-controller="UsersCtrl" ng-click = "viewUser(userp.token); closeModal()">Ver perfil</button>
     </div>
 
    </ion-content>
