--- a/www/templates/primeiraTelaEdit.html
+++ b/www/templates/primeiraTelaEdit.html
@@ -7,7 +7,7 @@
     <div class="margin-grey">
       Primeiro passo
     </div>
-    <div class="damn">
+    <div class="label">
       Configure seu perfil
     </div>
     <div class="profile-image padding">
@@ -84,7 +84,7 @@
         </div>
       </div>
     <span class="labels"></br></span>
-        <button ng-disabled="testForm.$invalid" class="sparara" ui-sref="app.segundaTelaEdit" ng-click="updateProfile(user)">Continuar</button>
+        <button ng-disabled="testForm.$invalid" class="update-information" ui-sref="app.segundaTelaEdit" ng-click="updateProfile(user)">Continuar</button>
         <span class="labels"></br></span>
         <span class="labels"></br></span>
     </form>
