--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -8,13 +8,13 @@
           </ion-nav-buttons>
         </ion-nav-bar>
         <div class="hero slide-up" style="background-image: url('data:image/jpeg;base64,{{user.background}}');">
-            <div class="blabla">
+            <div class="avatar-container">
                 <div class="avatar" style="background-image: url('data:image/jpeg;base64,{{user.avatar}}');"></div>
 
             </div>
-            <div class="ovocru">
+            <div class="avatar-information">
               <div class="light1">{{user.name}}</div>
-              <h4><div class="meucu">{{user.age}} anos</div></h4>
+              <h4><div class="user-age">{{user.age}} anos</div></h4>
               <div class="description">{{user.description}}</div>
               <div class="district">{{user.district}}, {{user.city}}</div>
             </div>
