--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -3,7 +3,7 @@
     <ion-nav-back-button ></ion-nav-back-button>
   </ion-nav-bar>
   <ion-content class="background-home">
-    <div class="damn">
+    <div class="label">
       Diga-nos o motivo de sua denuncia
     </div>
     <form name="testForm" class="padding-tela1" novalidate>
@@ -19,7 +19,7 @@
           </div>
         </div>
     <span class="labels"></br></span>
-        <button class="sparara2" ng-click="reportUser(userp, comment)">Continuar</button>
+        <button class="report-user" ng-click="reportUser(userp, comment)">Continuar</button>
         <span class="labels"></br></span>
         <span class="labels"></br></span>
     </form>
