--- a/www/templates/segundaTelaEdit.html
+++ b/www/templates/segundaTelaEdit.html
@@ -7,7 +7,7 @@
     <div class="margin-grey">
       Segundo passo
     </div>
-    <div class="damn">
+    <div class="label">
       Configurar busca
     </div>
     <div class="margin-grey-light">
@@ -46,7 +46,7 @@
       </div>
       {{user.search_range}} -->
       <span class="labels"></br></span>
-      <button class="sparara2" ng-click="updateProfile(user)" ui-sref="app.profile">Concluir</button>
+      <button class="report-user" ng-click="updateProfile(user)" ui-sref="app.profile">Concluir</button>
     </div>
   </ion-content>
 </ion-view>
