--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -9,12 +9,12 @@
   </ion-nav-bar>
     <ion-content>
         <div class="hero slide-up" style="background-image: url('data:image/jpeg;base64,{{userp.background}}');">
-            <div class="blabla">
+            <div class="avatar-container">
                 <div class="avatar" style="background-image: url('data:image/jpeg;base64,{{userp.avatar}}');"></div>
 
             </div>
             <div class="light1">{{userp.name}}</div>
-            <h4><div class="meucu">{{userp.age}} anos</div></h4>
+            <h4><div class="user-age">{{userp.age}} anos</div></h4>
             <div class="description">{{userp.description}}</div>
             <div class="district">{{userp.district}}, {{userp.city}}</div>
             <div class="tabs tabs-light tabs-icon-only static ">
@@ -46,7 +46,7 @@
           Não há fotos
         </button>
         <ion-gallery ion-gallery-items="userpgallery" ion-gallery-toggle="false"></ion-gallery>
-        
+
     </ion-content>
     <ion-tabs ng-if="isMatched" class="tabs-light tabs-icon-only">
 
