Fixed an error in previously modified html file and removed a variable not being used in the project.
Signed-Off-By: Bruno de Amorim Campos <amorim.software@gmail.com>

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -111,10 +111,10 @@
   background-image: url('../img/splashygygy.png');
 }
 
-.cuzaum {
+/*.cuzaum {
   position: relative;
   left: calc(50% - 50px);
-}
+}*/
 
 .bold {
   font-weight: bold;
