--- a/www/templates/activateAccount.html
+++ b/www/templates/activateAccount.html
@@ -7,7 +7,7 @@
           <input placeholder="Chave" type="text" ng-model='confirm_token'>
         </label>
 
-        <div class=".padding-email-key">
+        <div class="padding-email-key">
           Verifique a sua chave no e-mail.
           <input type="submit" class="button button-block button-calm" ng-click="confirmEmail(confirm_token)" value="Entrar com a chave" />
         </div>
