--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -19,7 +19,7 @@
           </div>
         </div>
     <span class="labels"></br></span>
-        <button class="report-user" ng-click="reportUser(userp, comment)">Continuar</button>
+        <button class="report-user" ng-click="reportUser(otherUser, comment)">Continuar</button>
         <span class="labels"></br></span>
         <span class="labels"></br></span>
     </form>
